# tree-sitter-wgsl

./: .gitignore  .npmignore  Cargo.toml  README.md  grammar.js  package.json  tree-sitter-wgsl.wasm
src/: grammar.json  node-types.json  parser.c  scanner.c
