[package]
name = "tree-sitter-wgsl"
description = "wgsl grammar for the tree-sitter parsing library"
version = "0.0.3"
authors = ["Mehmet Oguz Derin <mehmetoguzderin@mehmetoguzderin.com>"]
keywords = ["incremental", "parsing", "wgsl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mehmetoguzderin/tree-sitter-wgsl"
edition = "2018"
license = "CC0-1.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
